fix:overflow

--- a/src/Containers/Operation/CustomerManage/Order/Detail/active.less
+++ b/src/Containers/Operation/CustomerManage/Order/Detail/active.less
@@ -96,6 +96,7 @@ ul,li{
 	width:1000px;
 	margin-left:auto;
 	margin-right:auto;
+	overflow-x:hidden;
 	.ui-button{
 		button{
 			span{
@@ -387,5 +388,12 @@ span{
 		}
 	}
 }
-
+.container{
+	margin-top: 60px;
+    margin-bottom: 20px;
+    padding: 25px 20px;
+    height: auto;
+    position: relative;
+    overflow-x:hidden;
+}
 
